--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "yiisoft/yii2-imagine": "*",
         "kartik-v/yii2-widget-select2": "*",
         "kartik-v/yii2-slider": "*",
-		"whichbrowser/parser" : "*"
+        "whichbrowser/parser": "*",
+        "melipayamak/yii2": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
@@ -24,5 +25,11 @@
             "enabled": false
         }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "minimum-stability": "stable"
 }
