--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "kartik-v/yii2-widget-select2": "*",
         "kartik-v/yii2-slider": "*",
         "whichbrowser/parser": "*",
-        "melipayamak/yii2": "*"
+        "melipayamak/yii2": "*",
+        "froala/yii2-froala-editor": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
